# valid-scalar

./: .gitattributes  Cargo.toml  README.md  gen.nu  generate.nu
src/: _0.rs  _1.rs  _10.rs  _100.rs  _101.rs  _102.rs  _103.rs  _104.rs  _105.rs  _106.rs  _107.rs  _108.rs  _109.rs  _11.rs  _110.rs  _111.rs  _112.rs  _113.rs  _114.rs  _115.rs  _116.rs  _117.rs  _118.rs  _119.rs  _12.rs  _120.rs  _121.rs  _122.rs  _123.rs  _124.rs  _125.rs  _126.rs  _127.rs  _128.rs  _129.rs  _13.rs  _130.rs  _131.rs  _132.rs  _133.rs  (+473 more)
