[features]
u8lte0 = []
u8lte1 = []
u8lte10 = []
u8lte100 = []
u8lte101 = []
u8lte102 = []
u8lte103 = []
u8lte104 = []
u8lte105 = []
u8lte106 = []
u8lte107 = []
u8lte108 = []
u8lte109 = []
u8lte11 = []
u8lte110 = []
u8lte111 = []
u8lte112 = []
u8lte113 = []
u8lte114 = []
u8lte115 = []
u8lte116 = []
u8lte117 = []
u8lte118 = []
u8lte119 = []
u8lte12 = []
u8lte120 = []
u8lte121 = []
u8lte122 = []
u8lte123 = []
u8lte124 = []
u8lte125 = []
u8lte126 = []
u8lte127 = []
u8lte128 = []
u8lte129 = []
u8lte13 = []
u8lte130 = []
u8lte131 = []
u8lte132 = []
u8lte133 = []
u8lte134 = []
u8lte135 = []
u8lte136 = []
u8lte137 = []
u8lte138 = []
u8lte139 = []
u8lte14 = []
u8lte140 = []
u8lte141 = []
u8lte142 = []
u8lte143 = []
u8lte144 = []
u8lte145 = []
u8lte146 = []
u8lte147 = []
u8lte148 = []
u8lte149 = []
u8lte15 = []
u8lte150 = []
u8lte151 = []
u8lte152 = []
u8lte153 = []
u8lte154 = []
u8lte155 = []
u8lte156 = []
u8lte157 = []
u8lte158 = []
u8lte159 = []
u8lte16 = []
u8lte160 = []
u8lte161 = []
u8lte162 = []
u8lte163 = []
u8lte164 = []
u8lte165 = []
u8lte166 = []
u8lte167 = []
u8lte168 = []
u8lte169 = []
u8lte17 = []
u8lte170 = []
u8lte171 = []
u8lte172 = []
u8lte173 = []
u8lte174 = []
u8lte175 = []
u8lte176 = []
u8lte177 = []
u8lte178 = []
u8lte179 = []
u8lte18 = []
u8lte180 = []
u8lte181 = []
u8lte182 = []
u8lte183 = []
u8lte184 = []
u8lte185 = []
u8lte186 = []
u8lte187 = []
u8lte188 = []
u8lte189 = []
u8lte19 = []
u8lte190 = []
u8lte191 = []
u8lte192 = []
u8lte193 = []
u8lte194 = []
u8lte195 = []
u8lte196 = []
u8lte197 = []
u8lte198 = []
u8lte199 = []
u8lte2 = []
u8lte20 = []
u8lte200 = []
u8lte201 = []
u8lte202 = []
u8lte203 = []
u8lte204 = []
u8lte205 = []
u8lte206 = []
u8lte207 = []
u8lte208 = []
u8lte209 = []
u8lte21 = []
u8lte210 = []
u8lte211 = []
u8lte212 = []
u8lte213 = []
u8lte214 = []
u8lte215 = []
u8lte216 = []
u8lte217 = []
u8lte218 = []
u8lte219 = []
u8lte22 = []
u8lte220 = []
u8lte221 = []
u8lte222 = []
u8lte223 = []
u8lte224 = []
u8lte225 = []
u8lte226 = []
u8lte227 = []
u8lte228 = []
u8lte229 = []
u8lte23 = []
u8lte230 = []
u8lte231 = []
u8lte232 = []
u8lte233 = []
u8lte234 = []
u8lte235 = []
u8lte236 = []
u8lte237 = []
u8lte238 = []
u8lte239 = []
u8lte24 = []
u8lte240 = []
u8lte241 = []
u8lte242 = []
u8lte243 = []
u8lte244 = []
u8lte245 = []
u8lte246 = []
u8lte247 = []
u8lte248 = []
u8lte249 = []
u8lte25 = []
u8lte250 = []
u8lte251 = []
u8lte252 = []
u8lte253 = []
u8lte254 = []
u8lte255 = []
u8lte26 = []
u8lte27 = []
u8lte28 = []
u8lte29 = []
u8lte3 = []
u8lte30 = []
u8lte31 = []
u8lte32 = []
u8lte33 = []
u8lte34 = []
u8lte35 = []
u8lte36 = []
u8lte37 = []
u8lte38 = []
u8lte39 = []
u8lte4 = []
u8lte40 = []
u8lte41 = []
u8lte42 = []
u8lte43 = []
u8lte44 = []
u8lte45 = []
u8lte46 = []
u8lte47 = []
u8lte48 = []
u8lte49 = []
u8lte5 = []
u8lte50 = []
u8lte51 = []
u8lte52 = []
u8lte53 = []
u8lte54 = []
u8lte55 = []
u8lte56 = []
u8lte57 = []
u8lte58 = []
u8lte59 = []
u8lte6 = []
u8lte60 = []
u8lte61 = []
u8lte62 = []
u8lte63 = []
u8lte64 = []
u8lte65 = []
u8lte66 = []
u8lte67 = []
u8lte68 = []
u8lte69 = []
u8lte7 = []
u8lte70 = []
u8lte71 = []
u8lte72 = []
u8lte73 = []
u8lte74 = []
u8lte75 = []
u8lte76 = []
u8lte77 = []
u8lte78 = []
u8lte79 = []
u8lte8 = []
u8lte80 = []
u8lte81 = []
u8lte82 = []
u8lte83 = []
u8lte84 = []
u8lte85 = []
u8lte86 = []
u8lte87 = []
u8lte88 = []
u8lte89 = []
u8lte9 = []
u8lte90 = []
u8lte91 = []
u8lte92 = []
u8lte93 = []
u8lte94 = []
u8lte95 = []
u8lte96 = []
u8lte97 = []
u8lte98 = []
u8lte99 = []

[package]
edition = "2021"
name = "valid-scalar"
version = "255.255.255"
